# forecast-electricity-markets

./: .gitignore  README.md  conftest.py  pixi.toml  pyproject.toml  run.py
.dvc/: config
analysis/: exploratory.ipynb  exploratory_RNN.ipynb  exploratory_pytorch.ipynb  generate_baseline_forecast.ipynb  linear_regression_pytorch_FFmodel.ipynb  seq2seq.ipynb  seq2seq.py  simple_linear_regression.ipynb  visualize_forecast.py
analysis/notebooks/exploration/: exploratory.ipynb  exploratory_RNN.ipynb  generate_baseline_forecast.ipynb  seq2seq.ipynb  seq2seq_multivariate.ipynb  simple_linear_regression.ipynb
analysis/train_model/: seq2seq.py
analysis/training/: seq2seq.py
data/processed/opsd-time_series-2020-10-06/all_samples/: time_series_60min_singleindex.parquet  time_series_60min_singleindex.parquet.dvc
data/processed/opsd-time_series-2020-10-06/test/: .gitignore  time_series_60min_singleindex.parquet  time_series_60min_singleindex.parquet.dvc
data/processed/opsd-time_series-2020-10-06/train/: time_series_60min_singleindex.parquet  time_series_60min_singleindex.parquet.dvc
data/processed/opsd-time_series-2020-10-06/validation/: time_series_60min_singleindex.parquet  time_series_60min_singleindex.parquet.dvc
data/raw/from_opsd/opsd-time_series-2020-10-06/: .gitignore  (+1 more)
models/: architectures.py
scripts/processors/: process_opsd_time_series.py
src/: utils.py
src/data_pipeline/: dataloaders.py  preprocessing.py  split_train_test_val.py
src/training/: device.py  reproducibility.py  save_checkpoint.py  train_loops.py
tests/: test_preprocessing.py
(+1 files in other folders)
