[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elmark"
version = "0.1.0"
description = "Project on forecasting electricity markets in Europe"
dependencies = [
    "pydantic >= 2.0",
    "numpy >= 2.3.4,<3",
    "ipykernel >= 7.1.0,<8",
    "pip >= 25.2,<26",
    "pandas >= 2.3.3,<3"
]
requires-python = ">=3.12"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.pypi-dependencies]
elmark = { path = ".", editable = true}

[tool.pixi.environments]
default = { solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.3.4,<3"
ipykernel = ">=7.1.0,<8"
pip = ">=25.2,<26"
pandas = ">=2.3.3,<3"
pydantic = ">=2.12.4,<3"
pyarrow = "*"
